...
                        android:layout_width="@dimen/surface_button_icon_size"
                        android:layout_height="@dimen/surface_button_icon_size"
                        app:srcCompat="@drawable/ic_profile_nav_search"
                        app:tint="@color/home_text_secondary"  android:contentDescription="@string/cd_search" />

                    <EditText
                        android:id="@+id/etSearch"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/space_12"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="center_vertical"
...
